--- a/index.html
+++ b/index.html
@@ -271,12 +271,20 @@ nav a:hover, nav a:focus {
 <header>
   <img src="https://raw.githubusercontent.com/HillaryXavier/gmbpartners.github.io/main/logo.jpg" alt="Logo GMB Partners" class="logo" onclick="window.scrollTo({top:0, behavior:'smooth'})"/>
   <nav>
-    <a href="#pitch">🏠 Home</a>
-    <a href="#proposta">🛠️ Serviços</a>
-    <a href="#beneficios">🎯 Benefícios</a>
-    <a href="#contato">📞 Contato</a>
+    <a href="#pitch"><span class="emoji">🏠</span> Home</a>
+    <a href="#proposta"><span class="emoji">🛠️</span> Serviços</a>
+    <a href="#beneficios"><span class="emoji">🎯</span> Benefícios</a>
+    <a href="#contato"><span class="emoji">📞</span> Contato</a>
   </nav>
 </header>
+  
+  .emoji {
+  color: #25D366; /* verde WhatsApp */
+  margin-right: 6px;
+  font-size: 1.1em;
+  display: inline-block;
+  vertical-align: middle;
+}
 
 <section class="pitch" id="pitch" data-aos="fade-up">
   <p>Negócios locais perdem até 40% dos clientes por estarem invisíveis no Google. A <strong>GMB Partners</strong> aumenta chamadas e visitas em até 60 dias. Sem anúncios.</p>
