--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@ nav a:hover, nav a:focus {
 </header>
   
   .emoji {
-  color: #25D366; /* verde WhatsApp */
+  color: #25D366;
   margin-right: 6px;
   font-size: 1.1em;
   display: inline-block;
