--- a/index.html
+++ b/index.html
@@ -271,18 +271,17 @@ nav a:hover, nav a:focus {
 <header>
   <img src="https://raw.githubusercontent.com/HillaryXavier/gmbpartners.github.io/main/logo.jpg" alt="Logo GMB Partners" class="logo" onclick="window.scrollTo({top:0, behavior:'smooth'})"/>
   <nav>
-    <a href="#pitch"><span class="emoji">🏠</span> Home</a>
-    <a href="#proposta"><span class="emoji">🛠️</span> Serviços</a>
-    <a href="#beneficios"><span class="emoji">🎯</span> Benefícios</a>
-    <a href="#contato"><span class="emoji">📞</span> Contato</a>
-  </nav>
+  <a href="#pitch"><i class="fa-solid fa-house emoji-icon"></i> Home</a>
+  <a href="#proposta"><i class="fa-solid fa-screwdriver-wrench emoji-icon"></i> Serviços</a>
+  <a href="#beneficios"><i class="fa-solid fa-bullseye emoji-icon"></i> Benefícios</a>
+  <a href="#contato"><i class="fa-solid fa-phone emoji-icon"></i> Contato</a>
+</nav>
 </header>
   
-  .emoji {
+  .emoji-icon {
   color: #25D366;
   margin-right: 6px;
   font-size: 1.1em;
-  display: inline-block;
   vertical-align: middle;
 }
 
