--- a/index.html
+++ b/index.html
@@ -327,9 +327,9 @@ nav a:hover, nav a:focus {
       <p>Retorno sobre investimento e aumento no faturamento.</p>
     </div>
     <div class="card">
-      <i class="fa-solid fa-rocket-launch icon" aria-hidden="true"></i>
-      <p>Suporte especializado e acompanhamento contínuo.</p>
-    </div>
+  <i class="fa-solid fa-headset icon" aria-hidden="true"></i>
+  <p>Suporte especializado e acompanhamento contínuo.</p>
+</div>
   </div>
 </section>
 
