--- a/index.html
+++ b/index.html
@@ -263,6 +263,54 @@ nav a:hover, nav a:focus {
       margin-left: 12px;
       font-size: 0.9rem;
     }
+
+    .pitch-title {
+  text-align: center;
+  font-size: 2.4em;
+  color: #0f264b;
+  font-weight: 700;
+  margin-bottom: 14px;
+}
+
+.pitch-subtitle {
+  text-align: center;
+  font-size: 1.2em;
+  color: #444;
+  margin-bottom: 8px;
+}
+
+.pitch-highlight {
+  text-align: center;
+  font-size: 1.3em;
+  color: #111;
+  font-weight: 500;
+  margin-bottom: 30px;
+}
+
+.pitch-quote {
+  font-size: 1.2em;
+  font-style: italic;
+  text-align: center;
+  color: #0f264b;
+  font-weight: 600;
+  background: #f2f8f3;
+  border-left: 4px solid #25D366;
+  padding: 16px 20px;
+  max-width: 700px;
+  margin: 0 auto;
+  border-radius: 8px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+}
+
+.pitch-quote i {
+  color: #25D366;
+  margin: 0 6px;
+}
+
+.green {
+  color: #25D366;
+  font-weight: 700;
+}
   }
 </style>
 </head>
@@ -279,8 +327,16 @@ nav a:hover, nav a:focus {
 </header>
 
 <section class="pitch" id="pitch" data-aos="fade-up">
-  <p>Negócios locais perdem até 40% dos clientes por estarem invisíveis no Google. A <strong>GMB Partners</strong> aumenta chamadas e visitas em até 60 dias. Sem anúncios.</p>
-  <p><em>“Transformamos perfis invisíveis em máquinas de chamadas e visitas locais.”</em></p>
+  <h2 class="pitch-title">Você está invisível no Google?</h2>
+  <p class="pitch-subtitle">
+    Negócios locais perdem até <strong>40% dos clientes</strong> por estarem fora do radar digital.
+  </p>
+  <p class="pitch-highlight">
+    A <strong>GMB Partners</strong> aumenta <strong>chamadas</strong> e <strong>visitas</strong> em até <span class="green">60 dias</span>, sem anúncios.
+  </p>
+  <blockquote class="pitch-quote">
+    <i class="fa-solid fa-quote-left"></i> Transformamos perfis invisíveis em máquinas de chamadas e visitas locais. <i class="fa-solid fa-quote-right"></i>
+  </blockquote>
 </section>
 
 <section class="proposta" id="proposta" data-aos="fade-up">
