--- a/index.html
+++ b/index.html
@@ -311,6 +311,9 @@ nav a:hover, nav a:focus {
   color: #25D366;
   font-weight: 700;
 }
+    .pitch {
+  text-align: center;
+}
   }
 </style>
 </head>
