--- a/index.html
+++ b/index.html
@@ -314,6 +314,11 @@ nav a:hover, nav a:focus {
     .pitch {
   text-align: center;
 }
+    .pitch-quote {
+  text-align: center !important;
+  display: inline-block;
+  max-width: 100%;
+}
   }
 </style>
 </head>
