--- a/index.html
+++ b/index.html
@@ -319,6 +319,9 @@ nav a:hover, nav a:focus {
   display: inline-block;
   max-width: 100%;
 }
+    .pitch-quote {
+  margin: 0 auto;
+}
   }
 </style>
 </head>
