--- a/index.html
+++ b/index.html
@@ -345,9 +345,11 @@ nav a:hover, nav a:focus {
   <p class="pitch-highlight">
     A <strong>GMB Partners</strong> aumenta <strong>chamadas</strong> e <strong>visitas</strong> em até <span class="green">60 dias</span>, sem anúncios.
   </p>
-  <blockquote class="pitch-quote">
-    <i class="fa-solid fa-quote-left"></i> Transformamos perfis invisíveis em máquinas de chamadas e visitas locais. <i class="fa-solid fa-quote-right"></i>
-  </blockquote>
+  <div class="pitch-quote">
+  <i class="fa-solid fa-quote-left"></i>
+  <span>Transformamos perfis invisíveis em máquinas de chamadas e visitas locais.</span>
+  <i class="fa-solid fa-quote-right"></i>
+</div>
 </section>
 
 <section class="proposta" id="proposta" data-aos="fade-up">
