--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
       flex-wrap: wrap;
       text-align: center;
       background: #f2f8f3;
-      border-left: 4px solid #25D366;
+      border-left: 4px solid #0f264b;
       padding: 16px 24px;
       max-width: 700px;
       margin: 0 auto;
@@ -139,7 +139,7 @@
     }
 
     .pitch-quote i {
-      color: #25D366;
+      color: #0f264b;
     }
 
     h2 {
@@ -300,9 +300,7 @@
     A <strong>GMB Partners</strong> aumenta <strong>chamadas</strong> e <strong>visitas</strong> em até <span class="green">60 dias</span>, sem anúncios.
   </p>
   <div class="pitch-quote">
-    <i class="fa-solid fa-quote-left"></i>
     <span>Transformamos perfis invisíveis em máquinas de chamadas e visitas locais.</span>
-    <i class="fa-solid fa-quote-right"></i>
   </div>
 </section>
 
