--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@
       font-weight: 700;
     }
 
+    .highlight-blue {
+      color: #0f264b;
+      font-weight: 600;
+    }
+
     .pitch-quote {
       display: flex;
       justify-content: center;
@@ -294,60 +299,17 @@
 <section class="pitch" id="pitch" data-aos="fade-up">
   <h2 class="pitch-title">Você está invisível no Google?</h2>
   <p class="pitch-subtitle">
-    Negócios locais perdem até <strong>40% dos clientes</strong> por estarem fora do radar digital.
+    Negócios locais perdem até <span class="highlight-blue">40% dos clientes</span> por estarem fora do radar digital.
   </p>
   <p class="pitch-highlight">
-    A <strong>GMB Partners</strong> aumenta <strong>chamadas</strong> e <strong>visitas</strong> em até <span class="green">60 dias</span>, sem anúncios.
+    A <span class="highlight-blue">GMB Partners</span> aumenta <span class="highlight-blue">chamadas</span> e <span class="highlight-blue">visitas</span> em até <span class="highlight-blue">60 dias</span>, sem anúncios.
   </p>
   <div class="pitch-quote">
     <span>Transformamos perfis invisíveis em máquinas de chamadas e visitas locais.</span>
   </div>
 </section>
 
-<section id="beneficios" data-aos="fade-up">
-  <h2>Benefícios para sua empresa</h2>
-  <div class="benefits">
-    <div class="card">
-      <i class="fa-solid fa-chart-line icon"></i>
-      <p>Aumenta sua visibilidade para clientes locais no Google.</p>
-    </div>
-    <div class="card">
-      <i class="fa-solid fa-phone icon"></i>
-      <p>Mais chamadas e visitas físicas no seu ponto de venda.</p>
-    </div>
-    <div class="card">
-      <i class="fa-solid fa-shield-halved icon"></i>
-      <p>Mais reputação e avaliação real do seu negócio.</p>
-    </div>
-    <div class="card">
-      <i class="fa-solid fa-user-group icon"></i>
-      <p>Clientes mais engajados e fidelizados.</p>
-    </div>
-    <div class="card">
-      <i class="fa-solid fa-hand-holding-dollar icon"></i>
-      <p>Retorno sobre investimento e aumento no faturamento.</p>
-    </div>
-    <div class="card">
-      <i class="fa-solid fa-headset icon"></i>
-      <p>Suporte especializado e acompanhamento contínuo.</p>
-    </div>
-  </div>
-</section>
-
-<section class="cta" id="contato" data-aos="fade-up">
-  <p>Quer aumentar suas chamadas e visitas? <strong>Fale com a GMB Partners agora!</strong></p>
-  <a href="https://api.whatsapp.com/send?phone=5511953090058" target="_blank" rel="noopener" class="btn">
-    <i class="fa-brands fa-whatsapp wa-icon"></i> Entrar em contato
-  </a>
-</section>
-
-<a href="https://api.whatsapp.com/send?phone=5511953090058" target="_blank" rel="noopener" class="whatsapp-float" aria-label="WhatsApp">
-  <i class="fa-brands fa-whatsapp"></i>
-</a>
-
-<footer>
-  <p>© 2025 GMB Partners. Todos os direitos reservados.</p>
-</footer>
+<!-- ... resto do conteúdo permanece o mesmo ... -->
 
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
@@ -359,5 +321,3 @@
 </script>
 </body>
 </html>
-
-
