--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
     nav a:hover, nav a:focus {
       transform: scale(1.1);
       outline: none;
-      color: #25D366;
+      color: #0f264b;
     }
 
     nav a:hover .emoji, nav a:focus .emoji {
-      color: #25D366;
+      color: #0f264b;
     }
 
     section {
@@ -120,7 +120,7 @@
     }
 
     .green {
-      color: #25D366;
+      color: #0f264b;
       font-weight: 700;
     }
 
@@ -137,7 +137,7 @@
       flex-wrap: wrap;
       text-align: center;
       background: #f2f8f3;
-      border-left: 4px solid #25D366;
+      border-left: 4px solid #0f264b;
       padding: 16px 24px;
       max-width: 700px;
       margin: 0 auto;
@@ -150,7 +150,7 @@
     }
 
     .pitch-quote i {
-      color: #25D366;
+      color: #0f264b;
     }
 
     h2 {
@@ -187,7 +187,7 @@
 
     .card .icon {
       font-size: 1.8em;
-      color: #25D366;
+      color: #0f264b;
       flex-shrink: 0;
     }
 
@@ -225,7 +225,7 @@
     }
 
     .btn:hover {
-      background-color: #25D366;
+      background-color: #0f264b;
       transform: scale(1.05);
     }
 
@@ -237,7 +237,7 @@
       position: fixed;
       bottom: 20px;
       right: 20px;
-      background-color: #25D366;
+      background-color: #0f264b;
       color: white;
       width: 60px;
       height: 60px;
@@ -253,7 +253,7 @@
     }
 
     .whatsapp-float:hover {
-      background-color: #1ebe57;
+      background-color: #0c1c38;
       transform: scale(1.1);
     }
 
@@ -311,9 +311,7 @@
     A <strong class="highlight-blue">GMB Partners</strong> aumenta <strong class="highlight-blue">chamadas</strong> e <strong class="highlight-blue">visitas</strong> em até <span class="highlight-blue">60 dias</span>, sem anúncios.
   </p>
   <div class="pitch-quote">
-    <i class="fa-solid fa-quote-left"></i>
     <span>Transformamos perfis invisíveis em máquinas de chamadas e visitas locais.</span>
-    <i class="fa-solid fa-quote-right"></i>
   </div>
 </section>
 
