--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
     }
 
     .btn:hover {
-      background-color: #0f264b;
+      background-color: #25D366;
       transform: scale(1.05);
     }
 
@@ -237,7 +237,7 @@
       position: fixed;
       bottom: 20px;
       right: 20px;
-      background-color: #0f264b;
+      background-color: #25D366;
       color: white;
       width: 60px;
       height: 60px;
@@ -253,7 +253,7 @@
     }
 
     .whatsapp-float:hover {
-      background-color: #0c1c38;
+      background-color: #25D366;
       transform: scale(1.1);
     }
 
