--- a/index.html
+++ b/index.html
@@ -50,11 +50,12 @@
     }
 
     nav a .emoji {
-      color: #fff;
-      margin-right: 6px;
-      font-size: 1.1em;
-      transition: color 0.2s ease;
-    }
+  color: #fff;
+  margin-right: 6px;
+  font-size: 1.1em;
+  transition: color 0.2s ease;
+  filter: brightness(0) invert(1);
+}
 
     nav a:hover, nav a:focus {
       transform: scale(1.1);
