--- a/index.html
+++ b/index.html
@@ -49,11 +49,10 @@
       transition: color 0.2s ease, transform 0.2s ease;
     }
 
-    nav a .emoji {
-      filter: brightness(0) invert(1);
-      margin-right: 6px;
-      font-size: 1.1em;
-      transition: filter 0.3s ease;
+    nav a svg {
+      margin-right: 8px;
+      stroke: #fff;
+      transition: stroke 0.3s ease;
     }
 
     nav a:hover, nav a:focus {
@@ -62,9 +61,8 @@
       color: #25D366;
     }
 
-    nav a:hover .emoji, nav a:focus .emoji {
-      filter: none;
-      color: #25D366;
+    nav a:hover svg, nav a:focus svg {
+      stroke: #25D366;
     }
 
     section {
@@ -296,10 +294,22 @@
 <header>
   <img src="https://raw.githubusercontent.com/HillaryXavier/gmbpartners.github.io/main/logo.jpg" alt="Logo GMB Partners" class="logo" onclick="window.scrollTo({top:0, behavior:'smooth'})"/>
   <nav>
-    <a href="#pitch"><span class="emoji">🏠</span>Home</a>
-    <a href="#proposta"><span class="emoji">🛠️</span>Serviços</a>
-    <a href="#beneficios"><span class="emoji">🎯</span>Benefícios</a>
-    <a href="#contato"><span class="emoji">📞</span>Contato</a>
+    <a href="#pitch">
+      <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/><polyline points="9 22 9 12 15 12 15 22"/></svg>
+      Home
+    </a>
+    <a href="#proposta">
+      <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M14.7 6.3a5 5 0 0 1-6.6 6.6L2 18v4h4l5.1-5.1a5 5 0 0 1 6.6-6.6z"/></svg>
+      Serviços
+    </a>
+    <a href="#beneficios">
+      <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><circle cx="12" cy="12" r="6"/><circle cx="12" cy="12" r="2"/></svg>
+      Benefícios
+    </a>
+    <a href="#contato">
+      <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 16.92v3a2 2 0 0 1-2.18 2A19.86 19.86 0 0 1 3 5.18 2 2 0 0 1 5 3h3a2 2 0 0 1 2 1.72c.2 1.52.68 2.99 1.43 4.34a2 2 0 0 1-.45 2.18l-1.27 1.27a16 16 0 0 0 6.36 6.36l1.27-1.27a2 2 0 0 1 2.18-.45 17.58 17.58 0 0 0 4.34 1.43A2 2 0 0 1 22 16.92z"/></svg>
+      Contato
+    </a>
   </nav>
 </header>
 
