--- a/index.html
+++ b/index.html
@@ -39,26 +39,29 @@
     }
 
     nav a {
-      color: #fff;
-      margin-left: 28px;
-      text-decoration: none;
-      font-weight: 600;
-      font-size: 1rem;
       display: inline-flex;
       align-items: center;
+      margin-left: 28px;
+      color: #fff;
+      font-weight: 600;
+      font-size: 1rem;
+      text-decoration: none;
       transition: color 0.2s ease, transform 0.2s ease;
     }
 
     nav a svg {
       margin-right: 8px;
+      width: 18px;
+      height: 18px;
       stroke: #fff;
+      vertical-align: middle;
+      flex-shrink: 0;
       transition: stroke 0.3s ease;
     }
 
     nav a:hover, nav a:focus {
-      transform: scale(1.1);
-      outline: none;
       color: #25D366;
+      transform: scale(1.1);
     }
 
     nav a:hover svg, nav a:focus svg {
@@ -295,19 +298,30 @@
   <img src="https://raw.githubusercontent.com/HillaryXavier/gmbpartners.github.io/main/logo.jpg" alt="Logo GMB Partners" class="logo" onclick="window.scrollTo({top:0, behavior:'smooth'})"/>
   <nav>
     <a href="#pitch">
-      <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/><polyline points="9 22 9 12 15 12 15 22"/></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/>
+        <polyline points="9 22 9 12 15 12 15 22"/>
+      </svg>
       Home
     </a>
     <a href="#proposta">
-      <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M14.7 6.3a5 5 0 0 1-6.6 6.6L2 18v4h4l5.1-5.1a5 5 0 0 1 6.6-6.6z"/></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <path d="M14.7 6.3a5 5 0 0 1-6.6 6.6L2 18v4h4l5.1-5.1a5 5 0 0 1 6.6-6.6z"/>
+      </svg>
       Serviços
     </a>
     <a href="#beneficios">
-      <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><circle cx="12" cy="12" r="6"/><circle cx="12" cy="12" r="2"/></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <circle cx="12" cy="12" r="10"/>
+        <circle cx="12" cy="12" r="6"/>
+        <circle cx="12" cy="12" r="2"/>
+      </svg>
       Benefícios
     </a>
     <a href="#contato">
-      <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M22 16.92v3a2 2 0 0 1-2.18 2A19.86 19.86 0 0 1 3 5.18 2 2 0 0 1 5 3h3a2 2 0 0 1 2 1.72c.2 1.52.68 2.99 1.43 4.34a2 2 0 0 1-.45 2.18l-1.27 1.27a16 16 0 0 0 6.36 6.36l1.27-1.27a2 2 0 0 1 2.18-.45 17.58 17.58 0 0 0 4.34 1.43A2 2 0 0 1 22 16.92z"/></svg>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <path d="M22 16.92v3a2 2 0 0 1-2.18 2A19.86 19.86 0 0 1 3 5.18 2 2 0 0 1 5 3h3a2 2 0 0 1 2 1.72c.2 1.52.68 2.99 1.43 4.34a2 2 0 0 1-.45 2.18l-1.27 1.27a16 16 0 0 0 6.36 6.36l1.27-1.27a2 2 0 0 1 2.18-.45 17.58 17.58 0 0 0 4.34 1.43A2 2 0 0 1 22 16.92z"/>
+      </svg>
       Contato
     </a>
   </nav>
@@ -379,5 +393,6 @@
     once: true,
   });
 </script>
+
 </body>
 </html>
