--- a/index.html
+++ b/index.html
@@ -289,6 +289,53 @@
         margin-left: 12px;
         font-size: 0.9rem;
       }
+
+.solucao {
+  max-width: 800px;
+  margin: 60px auto;
+  background: #fff;
+  padding: 40px 30px;
+  border-radius: 14px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.05);
+}
+
+.solucao h2 {
+  text-align: center;
+  font-size: 2em;
+  color: #0f264b;
+  font-weight: 700;
+  margin-bottom: 24px;
+}
+
+.problema p,
+.solucao-lista p {
+  font-size: 1.1em;
+  color: #333;
+  margin-bottom: 14px;
+}
+
+.solucao-lista ul {
+  list-style: none;
+  padding-left: 0;
+}
+
+.solucao-lista li {
+  position: relative;
+  padding-left: 28px;
+  margin-bottom: 12px;
+  font-size: 1.05em;
+  color: #222;
+}
+
+.solucao-lista li::before {
+  content: '✔️';
+  position: absolute;
+  left: 0;
+  top: 0;
+  color: #25D366;
+  font-size: 1.1em;
+  line-height: 1.4;
+}
     }
   </style>
 </head>
@@ -337,6 +384,21 @@
   </p>
   <div class="pitch-quote">
     <span>Transformamos perfis invisíveis em máquinas de chamadas e visitas locais.</span>
+  </div>
+</section>
+
+  <section class="solucao" id="como-ajudamos" data-aos="fade-up">
+  <h2>Como ajudamos sua empresa</h2>
+  <div class="problema">
+    <p><strong>Problema:</strong> Perfis mal otimizados, sem reviews ou estratégia, perdem clientes.</p>
+  </div>
+  <div class="solucao-lista">
+    <p><strong>Solução:</strong></p>
+    <ul>
+      <li>Otimização do perfil Google Meu Negócio (Google Business Profile).</li>
+      <li>Captação e gestão de avaliações reais dos seus clientes.</li>
+      <li>Relatórios mensais para acompanhar o desempenho.</li>
+    </ul>
   </div>
 </section>
 
