--- a/index.html
+++ b/index.html
@@ -321,10 +321,21 @@
 
 .solucao-lista li {
   position: relative;
-  padding-left: 28px;
-  margin-bottom: 12px;
-  font-size: 1.05em;
-  color: #222;
+  padding-left: 32px;
+  margin-bottom: 18px;
+  font-size: 1.2em;
+  color: #0f264b;
+  font-weight: 500;
+  line-height: 1.6;
+}
+
+.solucao-lista li::before {
+  content: "✔️";
+  position: absolute;
+  left: 0;
+  top: 0.05em;
+  font-size: 1.2em;
+  color: #25D366;
 }
 
 .solucao-lista li::before {
@@ -394,10 +405,10 @@
   <div class="solucao-lista">
     <p><strong>Solução:</strong></p>
     <ul>
-      <li>Otimização do perfil Google Meu Negócio (Google Business Profile).</li>
-      <li>Captação e gestão de avaliações reais dos seus clientes.</li>
-      <li>Relatórios mensais para acompanhar o desempenho.</li>
-    </ul>
+  <li>Otimização do perfil Google Meu Negócio (Google Business Profile)</li>
+  <li>Captação e gestão de avaliações reais dos seus clientes</li>
+  <li>Relatórios mensais para acompanhar o desempenho</li>
+</ul>
   </div>
 </section>
 
