--- a/index.html
+++ b/index.html
@@ -279,16 +279,17 @@
     }
 
     @media (max-width: 480px) {
-      .benefits {
-        grid-template-columns: 1fr;
-      }
-      header {
-        padding: 12px 15px;
-      }
-      nav a {
-        margin-left: 12px;
-        font-size: 0.9rem;
-      }
+  .benefits {
+    grid-template-columns: 1fr;
+  }
+  header {
+    padding: 12px 15px;
+  }
+  nav a {
+    margin-left: 12px;
+    font-size: 0.9rem;
+  }
+} /* ✅ Fechando a media query corretamente aqui */
 
 .solucao {
   max-width: 800px;
