--- a/index.html
+++ b/index.html
@@ -77,16 +77,22 @@
     }
 
     section::before {
-      content: "";
-      background-image: url('https://raw.githubusercontent.com/HillaryXavier/gmbpartners.github.io/main/logo.jpg');
-      background-size: 150px;
-      background-repeat: repeat;
-      background-position: center;
-      opacity: 0.04;
-      position: absolute;
-      top: 0; left: 0; width: 100%; height: 100%;
-      z-index: 0;
-    }
+  content: "";
+  background-image: url('https://raw.githubusercontent.com/HillaryXavier/gmbpartners.github.io/main/logo.jpg');
+  background-size: 280px;
+  background-repeat: no-repeat;
+  background-position: center center;
+  opacity: 0.03;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  pointer-events: none;
+  filter: grayscale(100%) blur(1px);
+}
 
     section > * {
       position: relative;
