--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
     section::before {
   content: "";
   background-image: url('https://raw.githubusercontent.com/HillaryXavier/gmbpartners.github.io/main/logo.jpg');
-  background-size: 280px;
+  background-size: 340px; /* Aumenta o tamanho da imagem */
   background-repeat: no-repeat;
   background-position: center center;
-  opacity: 0.03;
+  opacity: 0.10; /* Deixa mais visível */
   position: absolute;
   top: 50%;
   left: 50%;
@@ -91,7 +91,7 @@
   height: 100%;
   z-index: 0;
   pointer-events: none;
-  filter: grayscale(100%) blur(1px);
+  filter: grayscale(80%) blur(0.5px); /* Leve suavização, sem esconder */
 }
 
     section > * {
