--- a/index.html
+++ b/index.html
@@ -34,9 +34,13 @@
     }
 
     .logo {
-      height: 42px;
-      cursor: pointer;
-    }
+  height: 58px;
+  padding: 4px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+  cursor: pointer;
+}
 
     nav a {
       display: inline-flex;
