--- a/index.html
+++ b/index.html
@@ -56,11 +56,14 @@
     transform: scale(1);
   }
 }
-
+nav {
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
     nav a {
       display: inline-flex;
       align-items: center;
-      margin-left: 28px;
       color: #fff;
       font-weight: 600;
       font-size: 1rem;
