--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
   animation: logoFadeIn 0.6s ease-out forwards;
   opacity: 0;
   transform: scale(0.95);
+  animation-fill-mode: forwards;
 }
 
 @keyframes logoFadeIn {
@@ -55,6 +56,7 @@
 
 .logo:hover {
   animation: logoPulse 1.5s ease-in-out infinite;
+  animation-fill-mode: both;
 }
 
 @keyframes logoPulse {
