--- a/index.html
+++ b/index.html
@@ -53,16 +53,8 @@
     transform: scale(1);
   }
 }
-
 .logo:hover {
-  animation: logoPulse 1.5s ease-in-out infinite;
-  animation-fill-mode: both;
-}
-
-@keyframes logoPulse {
-  0% { transform: scale(1.05); }
-  50% { transform: scale(1.08); }
-  100% { transform: scale(1.05); }
+  transform: scale(1.08); /* 👈 apenas escala suavemente */
 }
 nav {
   display: flex;
