--- a/index.html
+++ b/index.html
@@ -191,6 +191,16 @@ nav {
       text-align: center;
     }
 
+h2::after {
+  content: "";
+  display: block;
+  width: 60px;
+  height: 4px;
+  background-color: #0f264b;
+  margin: 12px auto 0;
+  border-radius: 2px;
+}
+    
     .benefits {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
