--- a/index.html
+++ b/index.html
@@ -384,6 +384,15 @@ nav {
 <header>
   <img src="https://raw.githubusercontent.com/HillaryXavier/gmbpartners.github.io/main/logo.jpg" alt="Logo GMB Partners" class="logo" onclick="window.scrollTo({top:0, behavior:'smooth'})"/>
   <nav>
+
+    <a href="#sobre">
+  <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+    <path d="M20 21v-2a4 4 0 0 0-3-3.87M4 21v-2a4 4 0 0 1 3-3.87M16 3.13a4 4 0 1 1-8 0"/>
+    <circle cx="12" cy="7" r="4"/>
+  </svg>
+  Sobre
+</a>
+    
     <a href="#pitch">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
         <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/>
@@ -424,6 +433,24 @@ nav {
   </p>
   <div class="pitch-quote">
     <span>Transformamos perfis invisíveis em máquinas de chamadas e visitas locais.</span>
+  </div>
+</section>
+
+<section id="sobre" data-aos="fade-up" style="background: #fff; border-radius: 14px; padding: 60px 30px; box-shadow: 0 4px 30px rgba(0,0,0,0.05); margin-top: 60px;">
+  <div style="display: flex; flex-wrap: wrap; align-items: center; gap: 40px;">
+    <div style="flex: 1 1 300px; text-align: center;">
+      <img src="https://raw.githubusercontent.com/HillaryXavier/gmbpartners.github.io/main/logo.jpg" alt="Sobre a GMB Partners" style="max-width: 240px; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.08);" />
+    </div>
+    <div style="flex: 2 1 400px;">
+      <h2 style="border-bottom: 4px solid #0f264b; display: inline-block; padding-bottom: 6px;">Sobre a GMB Partners</h2>
+      <p style="font-size: 1.15em; color: #333; margin-top: 20px; line-height: 1.7;">
+        A <strong class="highlight-blue">GMB Partners</strong> é uma consultoria especializada em performance local no Google. Ajudamos empresas que dependem de visitas físicas a conquistarem mais chamadas, clientes e reputação — tudo isso sem anúncios pagos.
+      </p>
+      <p style="font-size: 1.15em; color: #333; margin-top: 12px; line-height: 1.7;">
+        Com uma metodologia própria e validada, otimizamos seu perfil no Google Meu Negócio, aumentamos reviews reais e posicionamos sua empresa entre as mais visíveis da sua região.
+      </p>
+      <p style="font-size: 1.15em; color: #0f264b; font-weight: 600; margin-top: 20px;">Fazemos seu negócio aparecer onde mais importa.</p>
+    </div>
   </div>
 </section>
 
