--- a/index.html
+++ b/index.html
@@ -215,12 +215,13 @@ nav {
       box-shadow: 0 10px 25px rgba(0,0,0,0.12);
     }
 
-    .card .icon {
-      font-size: 1.8em;
-      color: #0f264b;
-      flex-shrink: 0;
-    }
-
+    .card .icon,
+nav a .icon {
+  font-size: 1.8em;
+  color: #0f264b;
+  flex-shrink: 0;
+  margin-right: 8px;
+}
     .card p {
       margin: 0;
       font-size: 1.1em;
@@ -384,13 +385,9 @@ nav {
 <header>
   <img src="https://raw.githubusercontent.com/HillaryXavier/gmbpartners.github.io/main/logo.jpg" alt="Logo GMB Partners" class="logo" onclick="window.scrollTo({top:0, behavior:'smooth'})"/>
   <nav>
-
-    <a href="#sobre">
-  <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-    <path d="M20 21v-2a4 4 0 0 0-3-3.87M4 21v-2a4 4 0 0 1 3-3.87M16 3.13a4 4 0 1 1-8 0"/>
-    <circle cx="12" cy="7" r="4"/>
-  </svg>
-  Sobre
+    
+  <a href="#sobre">
+  <i class="fa-solid fa-user-shield icon"></i> Sobre
 </a>
     
     <a href="#pitch">
