--- a/index.html
+++ b/index.html
@@ -386,8 +386,14 @@ nav a .icon {
   <img src="https://raw.githubusercontent.com/HillaryXavier/gmbpartners.github.io/main/logo.jpg" alt="Logo GMB Partners" class="logo" onclick="window.scrollTo({top:0, behavior:'smooth'})"/>
   <nav>
     
-  <a href="#sobre">
-  <i class="fa-solid fa-user-shield icon"></i> Sobre
+ <a href="#sobre">
+  <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon">
+    <circle cx="12" cy="12" r="10"/>
+    <circle cx="8" cy="10" r="1"/>
+    <circle cx="16" cy="10" r="1"/>
+    <path d="M8 16c1.5-1 6.5-1 8 0"/>
+  </svg>
+  Sobre
 </a>
     
     <a href="#pitch">
