--- a/index.html
+++ b/index.html
@@ -387,11 +387,11 @@ nav a .icon {
   <nav>
     
  <a href="#sobre">
-  <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon">
-    <circle cx="12" cy="12" r="10"/>
-    <circle cx="8" cy="10" r="1"/>
-    <circle cx="16" cy="10" r="1"/>
-    <path d="M8 16c1.5-1 6.5-1 8 0"/>
+  <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18"
+       viewBox="0 0 24 24" fill="none" stroke="#fff" stroke-width="2"
+       stroke-linecap="round" stroke-linejoin="round" class="icon">
+    <path d="M21 10c0 5-9 13-9 13S3 15 3 10a9 9 0 1 1 18 0z"/>
+    <circle cx="12" cy="10" r="3"/>
   </svg>
   Sobre
 </a>
