--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@ nav a .icon {
       </svg>
       Home
     </a>
-    <a href="#proposta">
+    <a href="#como-ajudamos">
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="18" height="18" fill="none" stroke="#fff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
         <path d="M14.7 6.3a5 5 0 0 1-6.6 6.6L2 18v4h4l5.1-5.1a5 5 0 0 1 6.6-6.6z"/>
       </svg>
