--- a/index.html
+++ b/index.html
@@ -91,12 +91,13 @@ nav {
     }
 
     section {
-      max-width: 1000px;
-      margin: 60px auto;
-      padding: 0 20px;
-      position: relative;
-      z-index: 1;
-    }
+  max-width: 1000px;
+  margin: 60px auto;
+  padding: 0 20px;
+  position: relative;
+  z-index: 1;
+  scroll-margin-top: 90px;
+}
 
     section::before {
   content: "";
