--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ nav {
 
     section::before {
   content: "";
-  background-image: url('https://raw.githubusercontent.com/HillaryXavier/gmbpartners.github.io/main/logo.jpg');
+  background-image: url('https://raw.githubusercontent.com/HillaryXavier/gmbpartners.github.io/main/logo.PNG');
   background-size: 340px; /* Aumenta o tamanho da imagem */
   background-repeat: no-repeat;
   background-position: center center;
@@ -488,7 +488,7 @@ nav a .icon {
 </section>
   
 <header>
-  <img src="https://raw.githubusercontent.com/HillaryXavier/gmbpartners.github.io/main/logo.jpg" alt="Logo GMB Partners" class="logo" onclick="window.scrollTo({top:0, behavior:'smooth'})"/>
+  <img src="https://raw.githubusercontent.com/HillaryXavier/gmbpartners.github.io/main/logo.PNG" alt="Logo GMB Partners" class="logo" onclick="window.scrollTo({top:0, behavior:'smooth'})"/>
   <nav>
     
  <a href="#sobre">
@@ -547,7 +547,7 @@ nav a .icon {
 <section id="sobre" data-aos="fade-up" style="background: #fff; border-radius: 14px; padding: 60px 30px; box-shadow: 0 4px 30px rgba(0,0,0,0.05); margin-top: 60px;">
   <div style="display: flex; flex-wrap: wrap; align-items: center; gap: 40px;">
     <div style="flex: 1 1 300px; text-align: center;">
-      <img src="https://raw.githubusercontent.com/HillaryXavier/gmbpartners.github.io/main/logo.jpg" alt="Sobre a GMB Partners" style="max-width: 240px; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.08);" />
+      <img src="https://raw.githubusercontent.com/HillaryXavier/gmbpartners.github.io/main/logo.PNG" alt="Sobre a GMB Partners" style="max-width: 240px; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.08);" />
     </div>
     <div style="flex: 2 1 400px;">
       <h2 style="border-bottom: 4px solid #0f264b; display: inline-block; padding-bottom: 6px;">Sobre a GMB Partners</h2>
