--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>GMB Partners | Performance local no Google</title>
+  <title>Partners Web Location | Performance local no Google</title>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -537,7 +537,7 @@ nav a .icon {
     Negócios locais perdem até <strong class="highlight-blue">40% dos clientes</strong> por estarem fora do radar digital.
   </p>
   <p class="pitch-highlight">
-    A <strong class="highlight-blue">GMB Partners</strong> aumenta <strong class="highlight-blue">chamadas</strong> e <strong class="highlight-blue">visitas</strong> em até <span class="highlight-blue">60 dias</span>, sem anúncios.
+    A <strong class="highlight-blue">Partners Web Location</strong> aumenta <strong class="highlight-blue">chamadas</strong> e <strong class="highlight-blue">visitas</strong> em até <span class="highlight-blue">60 dias</span>, sem anúncios.
   </p>
   <div class="pitch-quote">
     <span>Transformamos perfis invisíveis em máquinas de chamadas e visitas locais.</span>
@@ -550,9 +550,9 @@ nav a .icon {
       <img src="https://raw.githubusercontent.com/HillaryXavier/gmbpartners.github.io/main/logo.PNG" alt="Sobre a GMB Partners" style="max-width: 240px; border-radius: 12px; box-shadow: 0 4px 20px rgba(0,0,0,0.08);" />
     </div>
     <div style="flex: 2 1 400px;">
-      <h2 style="border-bottom: 4px solid #0f264b; display: inline-block; padding-bottom: 6px;">Sobre a GMB Partners</h2>
+      <h2 style="border-bottom: 4px solid #0f264b; display: inline-block; padding-bottom: 6px;">Sobre a Partners Web Location</h2>
       <p style="font-size: 1.15em; color: #333; margin-top: 20px; line-height: 1.7;">
-        A <strong class="highlight-blue">GMB Partners</strong> é uma consultoria especializada em performance local no Google. Ajudamos empresas que dependem de visitas físicas a conquistarem mais chamadas, clientes e reputação — tudo isso sem anúncios pagos.
+        A <strong class="highlight-blue">Partners Web Location</strong> é uma consultoria especializada em performance local no Google. Ajudamos empresas que dependem de visitas físicas a conquistarem mais chamadas, clientes e reputação — tudo isso sem anúncios pagos.
       </p>
       <p style="font-size: 1.15em; color: #333; margin-top: 12px; line-height: 1.7;">
         Com uma metodologia própria e validada, otimizamos seu perfil no Google Meu Negócio, aumentamos reviews reais e posicionamos sua empresa entre as mais visíveis da sua região.
@@ -608,7 +608,7 @@ nav a .icon {
 </section>
 
 <section class="cta" id="contato" data-aos="fade-up">
-  <p>Quer aumentar suas chamadas e visitas? <strong>Fale com a GMB Partners agora!</strong></p>
+  <p>Quer aumentar suas chamadas e visitas? <strong>Fale com a Partners Web Location agora!</strong></p>
   <a href="https://api.whatsapp.com/send?phone=5511988462756" target="_blank" rel="noopener" class="btn">
     <i class="fa-brands fa-whatsapp wa-icon"></i> Entrar em contato
   </a>
@@ -619,7 +619,7 @@ nav a .icon {
 </a>
 
 <footer>
-  <p>© 2025 GMB Partners. Todos os direitos reservados.</p>
+  <p>© 2025 Partners Web Location. Todos os direitos reservados.</p>
 </footer>
 
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
