--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
+<link rel="icon" href="https://raw.githubusercontent.com/HillaryXavier/gmbpartners.github.io/main/logo.PNG" type="image/png">
   <style>
     * {
       margin: 0; padding: 0; box-sizing: border-box; scroll-behavior: smooth;
