--- a/index.html
+++ b/index.html
@@ -656,6 +656,6 @@ nav a .icon {
   setInterval(contagemRegressiva, 1000);
   contagemRegressiva(); // chamada inicial
 </script>
-  
+  <a href="#" class="topo-float" aria-label="Voltar ao topo">↑</a>
 </body>
 </html>
