--- a/index.html
+++ b/index.html
@@ -466,6 +466,28 @@ nav a .icon {
   color: #fff;
 }
 
+  .topo-float {
+  position: fixed;
+  bottom: 90px;
+  right: 20px;
+  background: #0f264b;
+  color: white;
+  font-size: 24px;
+  width: 46px;
+  height: 46px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0 6px 14px rgba(0,0,0,0.25);
+  text-decoration: none;
+  z-index: 10002;
+  transition: background 0.3s ease, transform 0.2s ease;
+}
+.topo-float:hover {
+  background: #25D366;
+  transform: scale(1.1);
+}
     
   </style>
 </head>
