--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@ nav a .icon {
 </section>
 
 <section class="cta" id="contato" data-aos="fade-up">
-  <p>Quer aumentar suas chamadas e visitas? <strong>Fale com a Partners Web Location agora!</strong></p>
+  <p><strong>Desbloqueie o Google para sua empresa.</strong> Fale conosco e comece a aparecer onde mais importa.</p>
   <a href="https://api.whatsapp.com/send?phone=5511988462756" target="_blank" rel="noopener" class="btn">
     <i class="fa-brands fa-whatsapp wa-icon"></i> Entrar em contato
   </a>
