--- a/index.html
+++ b/index.html
@@ -364,9 +364,10 @@ nav a .icon {
   content: "✔️";
   position: absolute;
   left: 0;
-  top: 0;
+  top: 4px; /* <- alinhamento vertical ajustado */
   font-size: 1.3em;
-  color: #25D366;
+  color: #0f264b; /* <- nova cor azul */
+  line-height: 1;
 }
 
     @keyframes pulse {
