--- a/index.html
+++ b/index.html
@@ -586,27 +586,27 @@ nav a .icon {
 <section id="beneficios" data-aos="fade-up">
   <h2>Benefícios para sua empresa</h2>
   <div class="benefits">
-    <div class="card">
+    <div class="card" data-aos="fade-up">
       <i class="fa-solid fa-chart-line icon"></i>
       <p>Aumenta sua visibilidade para clientes locais no Google.</p>
     </div>
-    <div class="card">
+    <div class="card" data-aos="fade-up">
       <i class="fa-solid fa-phone icon"></i>
       <p>Mais chamadas e visitas físicas no seu ponto de venda.</p>
     </div>
-    <div class="card">
+    <div class="card" data-aos="fade-up">
       <i class="fa-solid fa-shield-halved icon"></i>
       <p>Mais reputação e avaliação real do seu negócio.</p>
     </div>
-    <div class="card">
+    <div class="card" data-aos="fade-up">
       <i class="fa-solid fa-user-group icon"></i>
       <p>Clientes mais engajados e fidelizados.</p>
     </div>
-    <div class="card">
+    <div class="card" data-aos="fade-up">
       <i class="fa-solid fa-hand-holding-dollar icon"></i>
       <p>Retorno sobre investimento e aumento no faturamento.</p>
     </div>
-    <div class="card">
+    <div class="card" data-aos="fade-up">
       <i class="fa-solid fa-headset icon"></i>
       <p>Suporte especializado e acompanhamento contínuo.</p>
     </div>
