--- a/index.html
+++ b/index.html
@@ -471,8 +471,16 @@ nav a .icon {
   align-items: flex-start;
   padding-left: 0; /* remove espaço desnecessário do antigo ícone */
 }
+
+.solucao-lista li:hover {
+  background: #f7fafd;
+  border-radius: 10px;
+  transition: background 0.3s ease;
+  padding: 8px 12px;
+}
     
   </style>
+  
 </head>
 <body>
 
