--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-<link rel="icon" href="https://raw.githubusercontent.com/HillaryXavier/gmbpartners.github.io/main/logo.PNG" type="image/png">
+<link rel="icon" href="https://raw.githubusercontent.com/HillaryXavier/partnersweblocation/main/logo.PNG" type="image/png">
   <style>
     * {
       margin: 0; padding: 0; box-sizing: border-box; scroll-behavior: smooth;
@@ -101,7 +101,7 @@ nav {
 
     section::before {
   content: "";
-  background-image: url('https://raw.githubusercontent.com/HillaryXavier/gmbpartners.github.io/main/logo.PNG');
+  background-image: url('https://raw.githubusercontent.com/HillaryXavier/partnersweblocation/main/logo.PNG');
   background-size: 340px; /* Aumenta o tamanho da imagem */
   background-repeat: no-repeat;
   background-position: center center;
