--- a/index.html
+++ b/index.html
@@ -91,13 +91,13 @@ nav {
     }
 
     section {
-  max-width: 1000px;
+  max-width: 1200px;
+  width: 100%;
   margin: 60px auto;
-  padding: 0 20px;
-  position: relative;
-  z-index: 1;
-  scroll-margin-top: 90px;
+  padding: 0 32px;
+  box-sizing: border-box;
 }
+
 
     section::before {
   content: "";
