--- a/index.html
+++ b/index.html
@@ -90,12 +90,15 @@ nav {
       stroke: #25D366;
     }
 
-    section {
+   section {
   max-width: 1200px;
   width: 100%;
   margin: 60px auto;
   padding: 0 32px;
   box-sizing: border-box;
+  position: relative;
+  z-index: 1;
+  scroll-margin-top: 90px;
 }
 
 
@@ -139,7 +142,7 @@ nav {
 
     .pitch-subtitle {
       font-size: 1.2em;
-      color: #444;
+      color: #333;
       margin-bottom: 12px;
     }
 
