--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@ nav a .icon {
 </section>
   
 <header>
-  <img src="https://raw.githubusercontent.com/HillaryXavier/partnersweblocation.github.io/main/logo.PNG" alt="Logo GMB Partners" class="logo" onclick="window.scrollTo({top:0, behavior:'smooth'})"/>
+  <img src="https://raw.githubusercontent.com/HillaryXavier/partnersweblocation.github.io/main/logo.PNG" alt="Logo Partners Web Location" class="logo" onclick="window.scrollTo({top:0, behavior:'smooth'})"/>
   <nav>
     
  <a href="#sobre">
