--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@ nav a .icon {
       <div><span id="minutos">--</span><small>Min</small></div>
       <div><span id="segundos">--</span><small>Seg</small></div>
     </div>
-    <a href="https://api.whatsapp.com/send?phone=5511988462756" target="_blank" class="btn btn-lancamento">
+    <a href="https://api.whatsapp.com/send?phone=5511988462756&text=Ol%C3%A1%2C%20quero%20uma%20avalia%C3%A7%C3%A3o%20do%20meu%20perfil%20no%20Google." target="_blank" class="btn btn-lancamento">
       <i class="fa-brands fa-whatsapp wa-icon"></i> Quero garantir meu desconto
     </a>
   </div>
@@ -624,7 +624,7 @@ nav a .icon {
   </a>
 </section>
 
-<a href="https://api.whatsapp.com/send?phone=5511988462756" target="_blank" rel="noopener" class="whatsapp-float" aria-label="WhatsApp">
+<a href="https://api.whatsapp.com/send?phone=5511988462756&text=Ol%C3%A1%2C%20quero%20uma%20avalia%C3%A7%C3%A3o%20do%20meu%20perfil%20no%20Google." target="_blank" rel="noopener" class="btn">
   <i class="fa-brands fa-whatsapp"></i>
 </a>
 
