--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@ nav a .icon {
 
 <section class="cta" id="contato" data-aos="fade-up">
   <p><strong>Desbloqueie o Google para sua empresa.</strong> Fale conosco e comece a aparecer onde mais importa.</p>
-  <a href="https://api.whatsapp.com/send?phone=5511988462756" target="_blank" rel="noopener" class="btn">
+  <a href="https://api.whatsapp.com/send?phone=5511988462756&text=Ol%C3%A1%2C%20quero%20uma%20avalia%C3%A7%C3%A3o%20do%20meu%20perfil%20no%20Google." target="_blank" rel="noopener" class="whatsapp-float" aria-label="WhatsApp">
     <i class="fa-brands fa-whatsapp wa-icon"></i> Entrar em contato
   </a>
 </section>
