--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-PODERIA REVISAR SE DEIXEI PASSAR ALGUM
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -476,6 +474,59 @@ nav a .icon {
   align-items: flex-start;
   padding-left: 0; /* remove espaço desnecessário do antigo ícone */
 }
+
+.beneficios-rapidos {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  gap: 30px;
+  margin: 40px 0;
+  text-align: center;
+}
+
+.beneficios-rapidos .icon {
+  font-size: 2.4em;
+  color: #0f264b;
+  margin-bottom: 12px;
+}
+
+.beneficios-rapidos h3 {
+  color: #0f264b;
+  margin-bottom: 8px;
+  font-size: 1.2em;
+}
+
+.beneficios-rapidos p {
+  color: #333;
+  font-size: 1em;
+  line-height: 1.4;
+}
+
+.v-m-v {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+  gap: 24px;
+  margin: 40px 0;
+}
+
+.v-m-v div {
+  background: #fff;
+  padding: 24px;
+  border-radius: 12px;
+  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.05);
+}
+
+.v-m-v h3 {
+  color: #0f264b;
+  font-size: 1.2em;
+  margin-bottom: 12px;
+}
+
+.v-m-v ul {
+  list-style: disc inside;
+  color: #333;
+  padding-left: 0;
+  line-height: 1.5;
+}
     
   </style>
   
@@ -619,6 +670,51 @@ nav a .icon {
   </div>
 </section>
 
+<section id="porque-escolher" data-aos="fade-up">
+  <h2>Por que escolher a Partners Web Location?</h2>
+  <div class="beneficios-rapidos">
+    <div>
+      <i class="fa-solid fa-magnifying-glass-location icon"></i>
+      <h3>Especialização em Google</h3>
+      <p>Somos especialistas em visibilidade local no Google Meu Negócio.</p>
+    </div>
+    <div>
+      <i class="fa-solid fa-chart-line icon"></i>
+      <h3>Resultados Orgânicos</h3>
+      <p>Aumentamos chamadas e visitas sem precisar de anúncios pagos.</p>
+    </div>
+    <div>
+      <i class="fa-solid fa-handshake icon"></i>
+      <h3>Parceria Estratégica</h3>
+      <p>Trabalhamos com olhar consultivo e personalizado para seu negócio.</p>
+    </div>
+  </div>
+</section>
+
+  <section id="visao-missao-valores" data-aos="fade-up">
+  <h2>Visão · Missão · Valores</h2>
+  <div class="v-m-v">
+    <div>
+      <h3>Visão</h3>
+      <p>Ser a consultoria referência no Brasil em performance local no Google, tornando empresas locais visíveis e líderes.</p>
+    </div>
+    <div>
+      <h3>Missão</h3>
+      <p>Impulsionar negócios locais por meio da otimização estratégica do Google Meu Negócio, com foco em resultados reais.</p>
+    </div>
+    <div>
+      <h3>Valores</h3>
+      <ul>
+        <li>Resultados Reais</li>
+        <li>Transparência e Ética</li>
+        <li>Excelência Consultiva</li>
+        <li>Simplicidade com Alta Performance</li>
+        <li>Crescimento Local Sustentável</li>
+      </ul>
+    </div>
+  </div>
+</section>
+  
 <section class="cta" id="contato" data-aos="fade-up">
   <p><strong>Desbloqueie o Google para sua empresa.</strong> Fale conosco e comece a aparecer onde mais importa.</p>
   <a href="https://api.whatsapp.com/send?phone=5511988462756" target="_blank" rel="noopener" class="btn">
