--- a/index.html
+++ b/index.html
@@ -716,16 +716,22 @@ nav a .icon {
 </section>
   
 <section class="cta" id="contato" data-aos="fade-up">
-  <p><strong>Desbloqueie o Google para sua empresa.</strong> Fale conosco e comece a aparecer onde mais importa.</p>
-  <a href="https://api.whatsapp.com/send?phone=5511988462756" target="_blank" rel="noopener" class="btn">
-    <i class="fa-brands fa-whatsapp wa-icon"></i> Entrar em contato
+  <p>
+    <strong>🚀 Pronto para sair da invisibilidade digital?</strong><br>
+    Transforme seu perfil no Google em uma máquina de chamadas e visitas locais.
+  </p>
+
+  <a href="https://api.whatsapp.com/send?phone=5511988462756&text=Ol%C3%A1%2C%20quero%20uma%20avalia%C3%A7%C3%A3o%20do%20meu%20perfil%20no%20Google"
+     target="_blank" rel="noopener" class="btn">
+    <i class="fa-brands fa-whatsapp wa-icon"></i> Quero uma avaliação gratuita
   </a>
 </section>
+
 
 <a href="https://api.whatsapp.com/send?phone=5511988462756" target="_blank" rel="noopener" class="whatsapp-float" aria-label="WhatsApp">
   <i class="fa-brands fa-whatsapp"></i>
 </a>
-
+  
 <footer>
   <p>© 2025 Partners Web Location. Todos os direitos reservados.</p>
 </footer>
