--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@ nav a .icon {
 
   <a href="https://api.whatsapp.com/send?phone=5511988462756&text=Ol%C3%A1%2C%20quero%20uma%20avalia%C3%A7%C3%A3o%20do%20meu%20perfil%20no%20Google"
      target="_blank" rel="noopener" class="btn">
-    <i class="fa-brands fa-whatsapp wa-icon"></i> Quero uma avaliação gratuita
+    <i class="fa-brands fa-whatsapp wa-icon"></i> Quero uma avaliação!
   </a>
 </section>
 
