--- a/index.html
+++ b/index.html
@@ -716,13 +716,13 @@ nav a .icon {
 </section>
   
 <section class="cta" id="contato" data-aos="fade-up">
-  <p>
-    <strong>
-  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="24" height="24" fill="#0f264b" style="vertical-align: middle; margin-right: 6px;">
-    <path d="M505.4 19.1c-2.7-2.7-6.6-3.7-10.3-2.6-49.4 14.1-96.8 39.7-137.3 74.6-24.1 20.9-44.9 45-61.8 71.7-4.6-.4-9.2-.7-13.9-.7-61.2 0-119.2 23.8-162.5 67.1L97 285.7l73.2-10.3 3.8 3.8 17.2 17.2-25.3 25.3-46.2-46.2-13.2 13.2c-42.1 42.1-67.2 98.1-71.7 157.2-.3 3.8 1.1 7.6 3.7 10.3 2.4 2.5 5.7 3.9 9.1 3.9.4 0 .9 0 1.3-.1 59.1-4.5 115.1-29.6 157.2-71.7l13.2-13.2-46.2-46.2 25.3-25.3 17.2 17.2 3.8 3.8-10.3 73.2 56.5-32.6c44.2-25.5 83.5-60.4 115.3-101.3 34.9-44.1 60.5-91.5 74.6-140.9 1.1-3.7.1-7.6-2.6-10.3zM336 208c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32z"/>
-  </svg>
-  Pronto para sair da invisibilidade digital?
-</strong><br>
+  <p style="font-size: 1.25em; color: #0f264b; font-weight: 600; display: flex; align-items: center; justify-content: center; gap: 10px;">
+    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" width="28" height="28" fill="#0f264b">
+      <path d="M505.4 19.1c-2.7-2.7-6.6-3.7-10.3-2.6-49.4 14.1-96.8 39.7-137.3 74.6-24.1 20.9-44.9 45-61.8 71.7-4.6-.4-9.2-.7-13.9-.7-61.2 0-119.2 23.8-162.5 67.1L97 285.7l73.2-10.3 3.8 3.8 17.2 17.2-25.3 25.3-46.2-46.2-13.2 13.2c-42.1 42.1-67.2 98.1-71.7 157.2-.3 3.8 1.1 7.6 3.7 10.3 2.4 2.5 5.7 3.9 9.1 3.9.4 0 .9 0 1.3-.1 59.1-4.5 115.1-29.6 157.2-71.7l13.2-13.2-46.2-46.2 25.3-25.3 17.2 17.2 3.8 3.8-10.3 73.2 56.5-32.6c44.2-25.5 83.5-60.4 115.3-101.3 34.9-44.1 60.5-91.5 74.6-140.9 1.1-3.7.1-7.6-2.6-10.3zM336 208c-17.7 0-32-14.3-32-32s14.3-32 32-32 32 14.3 32 32-14.3 32-32 32z"/>
+    </svg>
+    Pronto para sair da invisibilidade digital?
+  </p>
+  <p style="margin-top: 10px; font-size: 1.1em; color: #333;">
     Transforme seu perfil no Google em uma máquina de chamadas e visitas locais.
   </p>
 
