--- a/index.html
+++ b/index.html
@@ -717,7 +717,20 @@ nav a .icon {
   
 <section class="cta" id="contato" data-aos="fade-up">
   <p>
-    <strong>🚀 Pronto para sair da invisibilidade digital?</strong><br>
+    <strong>
+      <!-- Ícone SVG de foguete -->
+      <svg width="20" height="20" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg" style="vertical-align: middle; margin-right: 6px;">
+        <path
+          d="M32 2C40 6 45 14 45 23C45 31 41 39 36 44L40 52L32 50L28 60L24 49L16 48L22 42C17 37 15 29 17 21C19 13 25 6 32 2Z
+             M26 26C26 28.2 27.8 30 30 30C32.2 30 34 28.2 34 26C34 23.8 32.2 22 30 22C27.8 22 26 23.8 26 26Z"
+          stroke="#0f264b"
+          stroke-width="2"
+          fill="none"
+          stroke-linecap="round"
+          stroke-linejoin="round"/>
+      </svg>
+      Pronto para sair da invisibilidade digital?
+    </strong><br>
     Transforme seu perfil no Google em uma máquina de chamadas e visitas locais.
   </p>
 
