--- a/index.html
+++ b/index.html
@@ -718,16 +718,14 @@ nav a .icon {
 <section class="cta" id="contato" data-aos="fade-up">
   <p>
     <strong>
-      <!-- Ícone SVG de foguete -->
-      <svg width="20" height="20" viewBox="0 0 64 64" fill="none" xmlns="http://www.w3.org/2000/svg" style="vertical-align: middle; margin-right: 6px;">
-        <path
-          d="M32 2C40 6 45 14 45 23C45 31 41 39 36 44L40 52L32 50L28 60L24 49L16 48L22 42C17 37 15 29 17 21C19 13 25 6 32 2Z
-             M26 26C26 28.2 27.8 30 30 30C32.2 30 34 28.2 34 26C34 23.8 32.2 22 30 22C27.8 22 26 23.8 26 26Z"
-          stroke="#0f264b"
-          stroke-width="2"
-          fill="none"
-          stroke-linecap="round"
-          stroke-linejoin="round"/>
+      <!-- Ícone SVG de olho cortado (invisibilidade local) -->
+      <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
+           xmlns="http://www.w3.org/2000/svg" stroke="#0f264b" stroke-width="1.5"
+           stroke-linecap="round" stroke-linejoin="round"
+           style="vertical-align: middle; margin-right: 6px;">
+        <path d="M1 12C3 7 8 4 12 4C16 4 21 7 23 12C21 17 16 20 12 20C8 20 3 17 1 12Z"/>
+        <circle cx="12" cy="12" r="3"/>
+        <path d="M3 3L21 21"/>
       </svg>
       Pronto para sair da invisibilidade digital?
     </strong><br>
