--- a/index.html
+++ b/index.html
@@ -718,9 +718,10 @@ nav a .icon {
 <section class="cta" id="contato" data-aos="fade-up">
   <p>
     <strong>
-      <!-- Ícone SVG de olho cortado (invisibilidade local) -->
+      <!-- Ícone SVG de invisibilidade local (padrão visual correto) -->
       <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-           xmlns="http://www.w3.org/2000/svg" stroke="#0f264b" stroke-width="1.5"
+           xmlns="http://www.w3.org/2000/svg"
+           stroke="#0f264b" stroke-width="1.5"
            stroke-linecap="round" stroke-linejoin="round"
            style="vertical-align: middle; margin-right: 6px;">
         <path d="M1 12C3 7 8 4 12 4C16 4 21 7 23 12C21 17 16 20 12 20C8 20 3 17 1 12Z"/>
