--- a/index.html
+++ b/index.html
@@ -717,19 +717,7 @@ nav a .icon {
   
 <section class="cta" id="contato" data-aos="fade-up">
   <p>
-    <strong>
-      <!-- Ícone SVG de invisibilidade local (maior e com traço mais forte) -->
-      <svg width="32" height="32" viewBox="0 0 24 24" fill="none"
-           xmlns="http://www.w3.org/2000/svg"
-           stroke="#0f264b" stroke-width="2"
-           stroke-linecap="round" stroke-linejoin="round"
-           style="vertical-align: middle; margin-right: 8px;">
-        <path d="M1 12C3 7 8 4 12 4C16 4 21 7 23 12C21 17 16 20 12 20C8 20 3 17 1 12Z"/>
-        <circle cx="12" cy="12" r="3"/>
-        <path d="M3 3L21 21"/>
-      </svg>
-      Pronto para sair da invisibilidade digital?
-    </strong><br>
+    <strong>🚀 Pronto para sair da invisibilidade digital?</strong><br>
     Transforme seu perfil no Google em uma máquina de chamadas e visitas locais.
   </p>
 
