--- a/index.html
+++ b/index.html
@@ -691,18 +691,44 @@ nav a .icon {
   </div>
 </section>
 
-  <section id="visao-missao-valores" data-aos="fade-up">
+ <section id="visao-missao-valores" data-aos="fade-up">
   <h2>Visão · Missão · Valores</h2>
   <div class="v-m-v">
+    
+    <!-- VISÃO -->
     <div>
+      <div style="margin-bottom: 12px;">
+        <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#0f264b" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <path d="M1 12s4-7 11-7 11 7 11 7-4 7-11 7S1 12 1 12z"/>
+          <circle cx="12" cy="12" r="3"/>
+        </svg>
+      </div>
       <h3>Visão</h3>
       <p>Ser a consultoria referência no Brasil em performance local no Google, tornando empresas locais visíveis e líderes.</p>
     </div>
+
+    <!-- MISSÃO -->
     <div>
+      <div style="margin-bottom: 12px;">
+        <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#0f264b" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <circle cx="12" cy="12" r="10"/>
+          <circle cx="12" cy="12" r="6"/>
+          <circle cx="12" cy="12" r="2"/>
+          <line x1="22" y1="2" x2="15" y2="9"/>
+        </svg>
+      </div>
       <h3>Missão</h3>
       <p>Impulsionar negócios locais por meio da otimização estratégica do Google Meu Negócio, com foco em resultados reais.</p>
     </div>
+
+    <!-- VALORES -->
     <div>
+      <div style="margin-bottom: 12px;">
+        <svg width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#0f264b" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <path d="M6 3h12l4 6-10 12L2 9l4-6z"/>
+          <path d="M12 3v18"/>
+        </svg>
+      </div>
       <h3>Valores</h3>
       <ul>
         <li>Resultados Reais</li>
@@ -712,8 +738,10 @@ nav a .icon {
         <li>Crescimento Local Sustentável</li>
       </ul>
     </div>
+
   </div>
 </section>
+
   
 <section class="cta" id="contato" data-aos="fade-up">
   <p>
