--- a/index.html
+++ b/index.html
@@ -695,29 +695,32 @@ nav a .icon {
   <h2 style="display: flex; align-items: center; justify-content: center; gap: 28px; flex-wrap: wrap;">
 
     <span style="display: inline-flex; align-items: center; gap: 8px;">
+      <!-- Visão: olho -->
       <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#0f264b" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
         <path d="M1 12s4-7 11-7 11 7 11 7-4 7-11 7S1 12 1 12z"/>
         <circle cx="12" cy="12" r="3"/>
       </svg>
-      Visão
+      <strong>Visão</strong>
     </span>
 
     <span style="display: inline-flex; align-items: center; gap: 8px;">
+      <!-- Missão: só o alvo 🎯 -->
       <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#0f264b" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
         <circle cx="12" cy="12" r="10"/>
         <circle cx="12" cy="12" r="6"/>
         <circle cx="12" cy="12" r="2"/>
-        <line x1="22" y1="2" x2="15" y2="9"/>
       </svg>
-      Missão
+      <strong>Missão</strong>
     </span>
 
     <span style="display: inline-flex; align-items: center; gap: 8px;">
+      <!-- Valores: diamante corrigido -->
       <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#0f264b" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-        <path d="M6 3h12l4 6-10 12L2 9l4-6z"/>
-        <path d="M12 3v18"/>
+        <polygon points="6 3 18 3 22 9 12 21 2 9 6 3"/>
+        <path d="M12 21V9"/>
+        <path d="M2 9h20"/>
       </svg>
-      Valores
+      <strong>Valores</strong>
     </span>
 
   </h2>
@@ -743,8 +746,6 @@ nav a .icon {
     </div>
   </div>
 </section>
-
-
   
 <section class="cta" id="contato" data-aos="fade-up">
   <p>
