--- a/index.html
+++ b/index.html
@@ -692,37 +692,8 @@ nav a .icon {
 </section>
 
 <section id="visao-missao-valores" data-aos="fade-up">
-  <h2 style="display: flex; align-items: center; justify-content: center; gap: 28px; flex-wrap: wrap;">
-
-    <span style="display: inline-flex; align-items: center; gap: 8px;">
-      <!-- Visão: olho -->
-      <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#0f264b" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-        <path d="M1 12s4-7 11-7 11 7 11 7-4 7-11 7S1 12 1 12z"/>
-        <circle cx="12" cy="12" r="3"/>
-      </svg>
-      <strong>Visão</strong>
-    </span>
-
-    <span style="display: inline-flex; align-items: center; gap: 8px;">
-      <!-- Missão: só o alvo 🎯 -->
-      <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#0f264b" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-        <circle cx="12" cy="12" r="10"/>
-        <circle cx="12" cy="12" r="6"/>
-        <circle cx="12" cy="12" r="2"/>
-      </svg>
-      <strong>Missão</strong>
-    </span>
-
-    <span style="display: inline-flex; align-items: center; gap: 8px;">
-      <!-- Valores: diamante corrigido -->
-      <svg width="22" height="22" viewBox="0 0 24 24" fill="none" stroke="#0f264b" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-        <polygon points="6 3 18 3 22 9 12 21 2 9 6 3"/>
-        <path d="M12 21V9"/>
-        <path d="M2 9h20"/>
-      </svg>
-      <strong>Valores</strong>
-    </span>
-
+  <h2 style="text-align: center; color: #0f264b; font-weight: 700; font-size: 2.2em; margin-bottom: 40px;">
+    Visão · Missão · Valores
   </h2>
 
   <div class="v-m-v">
@@ -746,6 +717,7 @@ nav a .icon {
     </div>
   </div>
 </section>
+
   
 <section class="cta" id="contato" data-aos="fade-up">
   <p>
