--- a/index.html
+++ b/index.html
@@ -756,9 +756,9 @@ nav a .icon {
     const distancia = fim - agora;
 
     if (distancia < 0) {
-      document.getElementById("countdown").innerHTML = "<p style='color: #fff; font-size: 1.3em;'>Oferta encerrada!</p>";
-      return;
-    }
+  document.getElementById("countdown").style.display = "none";
+  return;
+}
 
     const dias = Math.floor(distancia / (1000 * 60 * 60 * 24));
     const horas = Math.floor((distancia % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
